# av-cpp

./: .clang-format  README.md  meson.build
.github/workflows/: meson.yml
example/: multi_stream.cpp  pcm_to_mp3.cpp  rtsp_muxer.cpp  transcode.cpp
examples/: multi_stream.cpp  packet_queue.hpp  pcm_to_mp3.cpp  rtsp_muxer.cpp  transcode.cpp
src/: ffmpeg.cpp  ffmpeg.hpp  video_test.cpp
tests/: video.cpp
